2009-06-11  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/util/hd-dbus.c (hd_dbus_prevent_display_blanking): New function
	to send display blanking prevention message to MCE.
	(hd_dbus_disable_display_blanking): New function to switch display
	blanking prevention on/off.
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_check_do_not_disturb_flag): Call
	hd_dbus_disable_display_blanking when we are in DnD mode.
	Fixes: NB#118192

2009-06-11  Laszlo Pere  <lpere@blumsoft.eu>

	* src/mb/hd-animation-actor.c: Fixed GLib warnings.

2009-06-11  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#120847 Text of time in notification goes out of box window
	NB#121060 Indication is done on top of Tasks button, with an
		  animation and highlight for every one min even when
		  there is no new event.
	NB#121584 Missed call notification text comes outside of the window
	(and NB#120626 Number of notifications is not coming in task
	 switcher but that's not complete)

	Bring ourselfves closed to tana lagu 2.3.

	* src/home/hd-task-navigator.c:
	  * layout_notwin(): implemented the new layout
	  * check_and_resize(): we couldn't cancel an already running effect
	  * FLY_EFFECT_DURATION, ZOOM_EFFECT_DURATION: changed to 250ms
	* src/util/hd-gtk-style.c (hd_gtk_style_resolve_logical_color):
	  Return white for unknown colors, much more readable.
	* src/mb/hd-atoms.h
	* src/mb/hd-atoms.c
	* src/mb/hd-note.h
	* src/mb/hd-note.c: Make _HILDON_INCOMING_EVENT_NOTIFICATION_AMOUNT
	  accessible.
	* TODO: new TODOs

2009-06-11  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/util/hd-volume-profile.[ch]: Add hd_volume_profile_set_silent.
	* src/util/hd-dbus.c (hd_dbus_system_bus_signal_handler): New function
	to catch signals on the D-Bus system bus. Sends TERM to applications
	and exits hildon-desktop when receiving shutdown_ind from DSME.
	(hd_dbus_init): Start listening to DSME signals.

2009-06-11  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>
